--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "eslint": "^8.21.0"
   },
-  "eslintConfig": {
+  "eslintConfig": {},
+  "dependencies": {
+    "dotenv": "^16.1.3",
+    "express": "^4.18.2"
   }
 }
